Fix unclickable logout on mobile button issue

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -13,6 +13,8 @@
 .dashboard .options {
   display: inline;
   margin-top: 10px;
+  position: relative;
+  z-index: 25;
 }
 
 .dashboard .options-icon {
